--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -8,6 +8,12 @@ body, html {
   height: 100%;
 }
 
+nav {
+  .material-icons {
+    color: $primary-color !important;
+  }
+}
+
 #content {
   display: flex;
   flex-direction: row;
@@ -57,6 +63,12 @@ body, html {
   flex: 1 0 100%;
 }
 
+/* map */
+.fixed-action-btn {
+  left: 61%;
+  bottom: 2%
+}
+
 /* cards */
 
 .card {
@@ -77,7 +89,7 @@ body, html {
     position: absolute !important;
     flex-shrink:0;
     min-width:100%;
-    min-height:100%
+    min-height:100%;
   }
 }
 
@@ -128,6 +140,51 @@ body, html {
 i.tiny {
   font-size: 1.5rem !important;
   vertical-align: text-bottom;
+}
+
+/* forms */
+
+form {
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.input-field label {
+  position: static !important;
+}
+
+.btn {
+  background-color: $primary-color !important;
+}
+
+img {
+  max-width: 100%;
+}
+
+.button-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.upload_widget {
+}
+
+.dropzone {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px dashed #9e9e9e;
+  color: #9e9e9e;
+  font-size: 1rem;
+  padding: 1.6rem 0;
+  margin: 30px 0 10px;
+  height: 100px;
+}
+
+.input-field label.active {
+  color: $primary-color !important;
 }
 
 /* mobile */
