--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
     <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDE1MgvvxMWgndHjPmSOEJIRAv9nQ6C6Cw">
     </script>
+    <script src="http://widget.cloudinary.com/global/all.js" type="text/javascript"></script>
 
     <!--Import Google Icon Font-->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
